Add RIS gemini cn generator

--- a/cng_analysis.ipynb
+++ b/cng_analysis.ipynb
@@ -83,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from misleading_image.twc import TweetWithContext as TWC\n",
     "from misleading_image.gemini import Gemini\n",
-    "from misleading_image.community_note_generation.gemini_multishot_cng import generate_community_note as gcn\n",
+    "from misleading_image.community_note_generation.gemini.gemini_multishot_cng import generate_community_note as gcn\n",
     "import pandas as pd\n",
     "# Without grounding \n",
     "# Iterate through each row\n",
